--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -3,16 +3,19 @@
 {% block content %}
     <div class="row">
         {% for product in products %}
-        <div class="col-lg-4">
-            <img class="thumbnail" src="{{ product.imageURL }}" alt="{{ product.name }}">
-            <div class="box-element product">
+        <div class="col-lg-4 mb-4">
+            <img class="img-fluid thumbnail" src="{{ product.imageURL }}" alt="{{ product.name }}">
+            <div class="box-element product p-3 border rounded">
                 <h6><strong>{{ product.name }}</strong></h6>
                 <hr>
-				
-                <button data-product="{{ product.id }}" data-action="add" class="btn btn-outline-secondary add-btn update-cart">Adicionar ao Carrinho</button>
                 
-                <a class="btn btn-outline-success" href="{% url 'product_detail' product.id %}">Ver</a>
-                <h4 style="display: inline-block; float: right"><strong>R${{ product.price }}</strong></h4>
+                <div class="d-flex justify-content-between align-items-center">
+                    <div>
+                        <button data-product="{{ product.id }}" data-action="add" class="btn btn-outline-secondary btn-sm add-btn update-cart">Adicionar ao Carrinho</button>
+                        <a class="btn btn-outline-success btn-sm" href="{% url 'product_detail' product.id %}">Ver</a>
+                    </div>
+                    <h4 class="mb-0"><strong>R${{ product.price }}</strong></h4>
+                </div>
 
             </div>
         </div>
